--- a/index.html
+++ b/index.html
@@ -9,12 +9,43 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="./css/main.css">
     <title>Lou page</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <div class="overlay"></div>
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+            <source src="./bg/landing-bg.mp4" type="video/mp4">
+        </video>
+        <div class="container h-100">
+            <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                    <h1 class="display-2">I'm Lou</h1>
+                    <p class="lead mb-0">
+                        < _the developer />
+                    </p>
+                    <a href="index2.html">
+                        <button class="btn btn-outline-light mt-4">Enter</button>
+                    </a>
+                </div>
+            </div>
+            <footer>
+                <div class="container-fluid mx-auto text-white-50 pb-4 fixed-bottom" id="bottom-footer">
+                    <div class="container text-center">
+                        <small>Copyright &copy;
+                            < _Lou /> 2020</small>
+                    </div>
+                </div>
+            </footer>
+        </div>
+
+    </header>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
