--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse bg-secondary" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                             href="#about">ABOUT</a>
@@ -190,10 +190,10 @@
             <!-------------------------------pro certificates group 1 end----------------------------->
             <!-------------------------------pro certificates group 2----------------------------->
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-5 col-md-7">
                     <img class="img-fluid shadow rounded zoom" src="./certs/pro2_java_intro.png" alt=" " />
                 </div>
-                <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                <div class="col-lg-7 col-md-5 d-flex align-items-center">
                     <p class="p-2">This Microsoft Professional Certificate is granted for completing the following three
                         courses:
                     </p>
@@ -229,10 +229,10 @@
             <!-------------------------------pro certificates group 2 end----------------------------->
             <!-------------------------------pro certificates group 3----------------------------->
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-5 col-md-7">
                     <img class="img-fluid shadow rounded zoom" src="./certs/pro3_jscript_and_node.png" alt=" " />
                 </div>
-                <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                <div class="col-lg-7 col-md-5 d-flex align-items-center">
                     <p class="p-2">This Microsoft Professional Certificate is granted for completing the following three
                         courses:
                     </p>
@@ -268,10 +268,10 @@
             <!-------------------------------pro certificates group 3 end----------------------------->
             <!-------------------------------pro certificates group 4----------------------------->
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-5 col-md-7">
                     <img class="img-fluid shadow rounded zoom" src="./certs/pro4_enterpriseSD.png" alt=" " />
                 </div>
-                <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                <div class="col-lg-7 col-md-5 d-flex align-items-center">
                     <p class="p-2">This Microsoft Professional Certificate is granted for completing the following three
                         courses:
                     </p>
@@ -309,30 +309,159 @@
             <!-------------------------------pro certificates group 4 end----------------------------->
             <!--------------------------------freecodecamp certificates------------------------------->
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-5 col-md-7">
                     <img class="img-fluid shadow rounded zoom" src="./certs/free_resp_web_design.png" alt=" " />
                 </div>
-                <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                <div class="col-lg-7 col-md-5 d-flex align-items-center">
                     <p class="p-2">This
                     </p>
                 </div>
             </div>
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-5 col-md-7">
                     <img class="img-fluid shadow rounded zoom" src="./certs/free_js-algorithms_design.png" alt=" " />
                 </div>
-                <div class="col-lg-7 col-md-6 d-flex align-items-center">
+                <div class="col-lg-7 col-md-5 d-flex align-items-center">
                     <p class="p-2">This FreecodeCamp certificate
                     </p>
                 </div>
             </div>
-
-
-
-
+            <div id="like_button_container"></div>
         </div>
     </section>
+    <!---------CERTIFICATES END------------->
 
+    <!---------IN PROGRESS------------->
+    <section class="page-section mb-0 bg-primary progress_section" id="progress_section">
+        <div class="container">
+            <!-- Progress Section Heading-->
+            <div>
+                <h2 class="page-section-heading d-inline-block text-white">IN PROGRESS...</h2>
+            </div>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-------------------courses in progress---------------------------------->
+            <div class="row">
+                <div class="col-lg-3 col-md-6 pt-5">
+                    <div class="card shadow h-100">
+                        <img src="./img/CS50.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">HarvardX CS50</h5>
+                            <p class="card-text text-small">The largest course on the Harvard campus and more than
+                                2,000,000
+                                learners worldwide have registered for the course on edX.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <div class="progress ">
+                                <div class="progress-bar bg-secondary" role="progressbar" style="width: 60%;"
+                                    aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-5">
+                    <div class="card shadow h-100">
+                        <img src="./img/react.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">React</h5>
+                            <p class="card-text text-small">React, Redux, React Hooks, React Router, GraphQL, Context
+                                API, Firebase, Redux-Saga, Stripe + more. </p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <div class="progress ">
+                                <div class="progress-bar bg-secondary" role="progressbar" style="width: 35%;"
+                                    aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-5">
+                    <div class="card shadow h-100">
+                        <img src="./img/aws.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AWS Certified Solutions Architect</h5>
+                            <p class="card-text text-small">The largest course on the Harvard campus and more than
+                                2,000,000
+                                learners worldwide have registered for the course on edX.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <div class="progress ">
+                                <div class="progress-bar bg-secondary" role="progressbar" style="width: 15%;"
+                                    aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">15%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pt-5">
+                    <div class="card shadow h-100">
+                        <img src="./img/sql.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Oracle SQL</h5>
+                            <p class="card-text text-small">The largest course on the Harvard campus and more than
+                                2,000,000
+                                learners worldwide have registered for the course on edX.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <div class="progress ">
+                                <div class="progress-bar bg-secondary" role="progressbar" style="width: 30%;"
+                                    aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---------IN PROGRESS END------------->
+
+    <!--------------PROJECTS---------------->
+    <section class="page-section mb-0 bg-info projects" id="projects">
+        <div class="container">
+            <!-- Progress Section Heading-->
+            <div>
+                <h2 class="page-section-heading d-inline-block text-white">PROJECTS</h2>
+            </div>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-----------PROJECT 1----------------------->
+            <div class="jumbotron shadow">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Weather page</h1>
+                        <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery.</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/aws.jpg" class="img img-fluid rounded" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app uses 2 different API's: one to show exact location of the weather station, and the other to
+                    get weather report and display it.
+                </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <div class="jumbotron">
+                <h1 class="display-4">Bob the builder</h1>
+                <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <div class="jumbotron">
+                <h1 class="display-4">Project 3</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
+                    attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.
+                </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -390,7 +519,8 @@
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
                     <h4 class="mb-4">ABOUT FREELANCER</h4>
-                    <p class="pre-wrap lead mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aut!
+                    <p class="pre-wrap lead mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Esse, aut!
                     </p>
                 </div>
             </div>
@@ -398,7 +528,8 @@
     </footer>
     <!-- Copyright Section-->
     <section class="copyright py-4 text-center text-white">
-        <div class="container"><small class="pre-wrap">Copyright © &nbsp &lt _Lou /&gt &nbsp 2020 </small></div>
+        <div class="container"><small class="pre-wrap">Copyright © &nbsp &lt _Lou /&gt &nbsp 2020
+            </small></div>
     </section>
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed"><a
@@ -415,6 +546,13 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="./js/scripts.js"></script>
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="./js/like_button.js"></script>
 </body>
 
 </html>
