projects look changed

--- a/index2.html
+++ b/index2.html
@@ -428,25 +428,33 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-----------PROJECT 1----------------------->
-            <div class="jumbotron shadow">
+            <div class="jumbotron shadow-lg bg-dark text-light">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
-                        <h1 class="display-4">Weather page</h1>
+                        <h1 class="display-4 p-1 border-bottom border-top ">Weather page</h1>
                         <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery.</p>
                     </div>
                     <div class="col-lg-5 col-md-6">
-                        <img src="./img/aws.jpg" class="img img-fluid rounded" alt="...">
+                        <img src="./img/weather2.png" class="img img-fluid shadow" alt="...">
                     </div>
                 </div>
                 <hr class="my-4">
                 <p>This app uses 2 different API's: one to show exact location of the weather station, and the other to
                     get weather report and display it.
                 </p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary text-small border-warning rounded-pill" href="#" role="button">Try
+                    it</a>
             </div>
-            <div class="jumbotron">
-                <h1 class="display-4">Bob the builder</h1>
-                <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+            <div class="jumbotron shadow-lg">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Bob the builder</h1>
+                        <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/bob.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
                 <hr class="my-4">
                 <p>This app is a little helper for tiler or painter (so far). </p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
@@ -456,7 +464,8 @@
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
                     attention to featured content or information.</p>
                 <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.
+                <p>It uses utility classes for typography and spacing to space content out within the larger
+                    container.
                 </p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </div>
