--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <!--Font awesome-->
@@ -29,7 +29,7 @@
 
     <!----------------- NAVBAR ----------------->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">&lt; _Lou /&gt;</a>
             <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -56,8 +56,8 @@
     <!-----------------NAVBAR   END----------------->
 
     <!-----------------HEADER----------------------->
-    <header class="masthead bg-primary text-white text-center w-100 h-100">
-        <div class="container-fluid d-flex align-items-center flex-column full-screen">
+    <header class="masthead bg-primary text-white text-center">
+        <div class="container d-flex align-items-center flex-column full-screen">
             <img class="masthead-avatar mb-5" src="./img/avataaars.png" alt="">
             <h1 class="masthead-heading mb-0">Welcome</h1>
             <p class="pre-wrap masthead-subheading font-weight-light mb-0">HTML_CSS_JS_BOOTSTRAP...
@@ -120,7 +120,7 @@
                 <!-- Certificates Items-->
                 <div class="col-md-7">
                     <a href="https://academy.microsoft.com/en-us/certificates/81f06e86-f149-4066-aa44-bceec7912b7d"><img
-                            class="img img-fluid shadow-lg rounded zoom" src="./certs/elsd.png" data-aos="fade-left"
+                            class="img img-fluid shadow-lg rounded zoom" src="./certs/elsd.png" data-aos="fade-up"
                             data-aos-delay="200" data-aos-duration="1000"></img></a>
                 </div>
             </div>
@@ -151,7 +151,7 @@
 
             <!-------------------------------pro certificates group 1----------------------------->
             <div class="row pt-5 text-small text-monospace">
-                <div class="col-lg-5 col-md-7" data-aos="fade-right" data-aos-delay="150" data-aos-duration="1000">
+                <div class="col-lg-5 col-md-7" data-aos="fade-down" data-aos-delay="150" data-aos-duration="1000">
                     <img class="img-fluid shadow rounded zoom" src="./certs/pro1_cs_intro.png" alt=" " />
                 </div>
                 <div class="col-lg-7 col-md-5 d-flex align-items-center">
@@ -184,7 +184,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <img data-aos="fade-left" data-aos-duration="3000" src="./certs/pro1_3_262x.png"
+                    <img data-aos="fade-up" data-aos-duration="3000" src="./certs/pro1_3_262x.png"
                         class="img img-fluid shadow rounded zoom" alt="...">
 
                     <p class="p-2">Understanding how a computer “thinks” is one of the first steps to becoming an
@@ -273,7 +273,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <img src="./certs/pro3_3_284x.png" class="img img-fluid shadow rounded zoom" alt="..."
-                        data-aos="fade-left" data-aos-delay="150" data-aos-duration="3000">
+                        data-aos="fade-up" data-aos-delay="150" data-aos-duration="3000">
 
                     <p class="p-2">Turning ideas into technical solutions. Studying the process
                         of market research, user-centered design, and front-end web development, wireframes
@@ -315,7 +315,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <img src="./certs/pro4_3_dis50.png" class="img img-fluid shadow rounded zoom" alt="..."
-                        data-aos="fade-left" data-aos-delay="150" data-aos-duration="3000">
+                        data-aos="fade-up" data-aos-delay="150" data-aos-duration="3000">
 
                     <p class="p-2">The instructors for this course include programmers who have worked on globalization
                         and localization of some of the world’s most successful software. They’ve experienced the good,
@@ -468,6 +468,7 @@
                     role="button">Try
                     it</a>
             </div>
+            <!--------------PROJECT 2--------------------->
             <div class="jumbotron neon bg-dark text-light">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
@@ -482,6 +483,7 @@
                 <p>This app is a little helper for tiler or painter (so far). </p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </div>
+            <!--------------PROJECT 3--------------------->
             <div class="jumbotron neon bg-dark text-light">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
@@ -496,6 +498,7 @@
                 <p>This app is a little helper for tiler or painter (so far). </p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </div>
+            <!--------------PROJECT 4--------------------->
             <div class="jumbotron neon bg-dark text-light">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
@@ -504,6 +507,81 @@
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <img src="./img/trivia.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <!--------------PROJECT 5--------------------->
+            <div class="jumbotron neon bg-dark text-light">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Background generator</h1>
+                        <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/bg_genertor.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <!--------------PROJECT 6--------------------->
+            <div class="jumbotron neon bg-dark text-light">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Shopping list</h1>
+                        <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/trivia.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <!--------------PROJECT 7--------------------->
+            <div class="jumbotron neon bg-dark text-light">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Weryk online</h1>
+                        <p class="lead">HTML, CSS, Bootstrap, Javascript, Jquery</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/weryk.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <!--------------PROJECT 8--------------------->
+            <div class="jumbotron neon bg-dark text-light">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Landing page</h1>
+                        <p class="lead">HTML, CSS, Bootstrap</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/landing.png" class="img img-fluid shadow" alt="...">
+                    </div>
+                </div>
+                <hr class="my-4">
+                <p>This app is a little helper for tiler or painter (so far). </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+            <!--------------PROJECT 9--------------------->
+            <div class="jumbotron neon bg-dark text-light">
+                <div class="row">
+                    <div class="col-lg-7 col-md-6">
+                        <h1 class="display-4">Photographer gallery</h1>
+                        <p class="lead">HTML, CSS</p>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <img src="./img/moriak.png" class="img img-fluid shadow" alt="...">
                     </div>
                 </div>
                 <hr class="my-4">
